fixed text alignment issues in add tag dialog

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -145,7 +145,8 @@ hr {
 }
 
 .login-logout {
-	 font-size: 16px;
+	vertical-align: middle;
+	font-size: 16px;
 }
 
 .margin-right-5 {
@@ -194,22 +195,16 @@ hr {
 	list-style-type: none; 
 	margin: 0; 
 	padding: 0; 
-	width: 60%; 
+	width: 90%; 
 }
 
 #selectable li { 
-	vertical-align:middle;
 	margin: 3px; 
 	font-size: 14px; 
-	height: 18px; 
+	height: 20px; 
+	padding-left: 3px;
+	line-height: 14px;
 }
-#selectable2 li { 
-	margin: 3px; 
-	padding: 0.4em; 
-	font-size: 1.4em; 
-	height: 18px; 
-}
-
 
 .starter-template {
   padding: 40px 15px;
